set outline=none to a avoid a border on Safari
Safari puts a an outline around the menu drop down button, setting
to none to remove it.

--- a/themes/roxo-hugo/assets/scss/components/_navigation.scss
+++ b/themes/roxo-hugo/assets/scss/components/_navigation.scss
@@ -105,6 +105,10 @@
     position: relative;
     }
 
+   .dropdown-toggle {
+    outline: none;
+    }
+
    .dropdown-menu {
     border: none;
     position:left;
